bk_ida/gobmkida/g3/buildSpiralOrder
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/buildSpiralOrder/src/patterns/dfa.c:617:44: error: use of undeclared identifier 'xmmword_4B0890'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4B0890); 
                                           ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/buildSpiralOrder/src/obj/3/dfa.o] Error 1
